pankaj did it right

--- a/src/index.html
+++ b/src/index.html
@@ -2,15 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Elasticsearch</title>
+  <title>Elasticsearch Wrapper</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <title>ESWrapper Documentation</title>
     <link href="assets/css/common.css" rel="stylesheet">
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">
-    <script src="assets/js/jquery.min.js"></script>
     <link rel="shortcut icon" href="assets/img/favicon.ico">
 </head>
 <body>
